<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bg"
              android:orientation="vertical">

    <include
        android:id="@+id/includeTop"
        layout="@layout/top_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_height"/>


    <LinearLayout
        android:id="@+id/llTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/small_margin"
        android:paddingLeft="@dimen/small_margin"
        android:paddingRight="@dimen/small_margin"
        android:paddingTop="@dimen/big_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/margin_four"
            android:drawableTop="@mipmap/certification_red"
            android:gravity="center"
            android:text="@string/certification"
            android:textColor="@color/text_black"
            android:textSize="@dimen/small_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/margin_four"
            android:drawableTop="@mipmap/certification_red"
            android:gravity="center"
            android:text="@string/set_pwd_and_shouquan"
            android:textColor="@color/text_black"
            android:textSize="@dimen/small_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/margin_four"
            android:drawableTop="@mipmap/certification_gray"
            android:gravity="center"
            android:text="@string/binding_bank_card"
            android:textColor="@color/text_black"
            android:textSize="@dimen/small_text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/small_margin"
        android:paddingRight="@dimen/small_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_twenty_four"
            android:text="@string/set_exchange_pwd_tip1"
            android:textColor="@color/text_black"
            android:textSize="@dimen/normal_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/set_exchange_pwd_tip2"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/normal_text"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/set_exchange_pwd_tip3"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/normal_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_twenty_four"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/set_exchange_pwd_tip4"
            android:textColor="@color/text_black"
            android:textSize="@dimen/normal_text"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/big_margin"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginRight="@dimen/small_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:background="@drawable/selector_theme_corner_button"
        android:text="@string/setting_now"
        android:textColor="@color/white"
        android:textSize="@dimen/normal_text"/>


</LinearLayout>
