<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/bg"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvProjectDetail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_height"
            android:background="@drawable/selector_gray_click"
            android:gravity="center"
            android:text="@string/project_detail"
            android:textColor="@color/text_black"
            android:textSize="@dimen/big_text"/>

        <TextView
            android:id="@+id/tvOrderDetail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_height"
            android:layout_marginTop="@dimen/line_one_dp"
            android:background="@drawable/selector_gray_click"
            android:gravity="center"
            android:text="@string/order_detail"
            android:textColor="@color/text_black"
            android:textSize="@dimen/big_text"/>


        <TextView
            android:id="@+id/tvClose"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_height"
            android:layout_marginTop="@dimen/margin_twenty_four"
            android:background="@drawable/selector_gray_click"
            android:gravity="center"
            android:text="@string/close"
            android:textColor="@color/text_black"
            android:textSize="@dimen/big_text"/>
    </LinearLayout>
</LinearLayout>
