<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bg"
              android:orientation="vertical">

    <com.yuanin.aimifinance.view.MyViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="@dimen/weight"
        android:layout_weight="1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_one_dp"
        android:background="@color/bg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_height"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvIndex"
            android:layout_width="@dimen/weight"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="2dp"
            android:drawableTop="@mipmap/index"
            android:gravity="center"
            android:text="@string/index"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/small_text"/>

        <TextView
            android:id="@+id/tvFinance"
            android:layout_width="@dimen/weight"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="2dp"
            android:drawableTop="@mipmap/finance"
            android:gravity="center"
            android:text="@string/finance"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/small_text"/>

        <TextView
            android:id="@+id/tvMine"
            android:layout_width="@dimen/weight"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="2dp"
            android:drawableTop="@mipmap/mine"
            android:gravity="center"
            android:text="@string/mine"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/small_text"/>

    </LinearLayout>
</LinearLayout>
