<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bg"
              android:orientation="vertical"
              tools:context="com.yuanin.aimifinance.activity.ModifyBindingPhoneActivity">

    <include
        android:id="@+id/includeTop"
        layout="@layout/top_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_height"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/normal_height"
        android:layout_marginLeft="@dimen/small_margin"
        android:gravity="center"
        android:text="需要验证您的实名信息"
        android:textColor="@color/text_light_gray"
        android:textSize="@dimen/normal_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/small_margin">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_height"
            android:layout_marginRight="@dimen/small_margin"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/reset_exchange_password_input_real_name"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_light_gray"
            android:textSize="@dimen/normal_text"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:background="@color/bg"/>


        <EditText
            android:id="@+id/etIdCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_height"
            android:layout_marginRight="@dimen/small_margin"
            android:background="@null"
            android:digits="1234567890Xx"
            android:gravity="center_vertical"
            android:hint="@string/reset_exchange_password_input_id_card"
            android:maxLength="18"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_light_gray"
            android:textSize="@dimen/normal_text"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/normal_height"
        android:layout_marginLeft="@dimen/small_margin"
        android:gravity="center"
        android:text="需要验证您的手机号码"
        android:textColor="@color/text_light_gray"
        android:textSize="@dimen/normal_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/small_margin">

        <EditText
            android:id="@+id/etPhone"
            style="@style/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_height"
            android:layout_marginRight="@dimen/small_margin"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/input_new_phone"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_light_gray"
            android:textSize="@dimen/normal_text"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:background="@color/bg"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_height"
            android:layout_marginRight="@dimen/small_margin">


            <TextView
                android:id="@+id/tvGetCode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="right|center_vertical"
                android:text="@string/get_code"
                android:textColor="@drawable/selector_login_rigister_click"
                android:textSize="@dimen/small_text"/>


            <EditText
                android:id="@+id/etCode"
                style="@style/numberEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@id/tvGetCode"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/input_code"
                android:maxLength="6"
                android:textColor="@color/text_black"
                android:textColorHint="@color/text_light_gray"
                android:textSize="@dimen/normal_text"/>

        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/big_margin"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginRight="@dimen/small_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:background="@drawable/selector_theme_corner_button"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/normal_text"/>

</LinearLayout>
